// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Platform/Webex Member Roster External Member 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member-roster"
    >
      <div
        className="external-user-warning"
      >
        <i
          aria-label={null}
          className="md-icon icon icon-external-user_20"
          style={
            Object {
              "color": "rgba(252, 157, 3, 1)",
              "fontSize": 20,
            }
          }
        />
        <h5>
          People outside your company are included in this space
        </h5>
      </div>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Barbara German"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BG
          </span>
          <img
            alt="Barbara German"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/barbara.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Barbara German
          </div>
        </div>
      </div>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Brandon Seeger"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BS
          </span>
          <img
            alt="Brandon Seeger"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/brandon.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Brandon Seeger
          </div>
          <div
            className="organization"
          >
            Gmail.com
          </div>
        </div>
      </div>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Maria Rossi"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            MR
          </span>
          <img
            alt="Maria Rossi"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/maria.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Maria Rossi
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Roster Meeting 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member-roster"
    >
      <h4
        className="section-title"
      >
        In meeting
      </h4>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Barbara German"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BG
          </span>
          <img
            alt="Barbara German"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/barbara.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Barbara German
          </div>
          <div
            className="roles"
          >
            You, Presenter
          </div>
        </div>
        <i
          aria-label={null}
          className="md-icon icon icon-content-share_16 sharing"
          style={
            Object {
              "fontSize": 16,
            }
          }
        />
      </div>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Brenda Song"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BS
          </span>
          <img
            alt="Brenda Song"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/brenda.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Brenda Song
          </div>
          <div
            className="roles"
          >
            Host
          </div>
        </div>
        <i
          aria-label={null}
          className="md-icon icon icon-microphone-muted_16 muted"
          style={
            Object {
              "fontSize": 16,
            }
          }
        />
      </div>
      <h4
        className="section-title"
      >
        Not in meeting
      </h4>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Giacomo Edwards"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            GE
          </span>
          <img
            alt="Giacomo Edwards"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/giacomo.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Giacomo Edwards
            <span
              className="guest"
            >
               (Guest)
            </span>
          </div>
        </div>
        <i
          aria-label={null}
          className="md-icon icon icon-microphone-muted_16 muted"
          style={
            Object {
              "fontSize": 16,
            }
          }
        />
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Roster Space 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc-member-roster"
    >
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Barbara German"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BG
          </span>
          <img
            alt="Barbara German"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/barbara.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Barbara German
          </div>
        </div>
      </div>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Giacomo Edwards"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            GE
          </span>
          <img
            alt="Giacomo Edwards"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/giacomo.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Giacomo Edwards
          </div>
        </div>
      </div>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Brenda Song"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BS
          </span>
          <img
            alt="Brenda Song"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/brenda.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Brenda Song
          </div>
        </div>
      </div>
      <div
        className="wxc-member"
      >
        <div
          className="md-avatar md-avatar--medium"
          title="Simon Damiano"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            SD
          </span>
          <img
            alt="Simon Damiano"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/simon.png"
          />
        </div>
        <div
          className="details"
        >
          <div
            className="name"
          >
            Simon Damiano
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
